--- a/instagram/src/App.css
+++ b/instagram/src/App.css
@@ -48,7 +48,9 @@ table {
 }
 
 .App {
-  max-width: 800px;
-  margin: auto;
+    max-width: 800px;
+	margin: auto;
+	font-family: sans-serif;
 }
+
 
